--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,6 +9,7 @@ variables:
 
 steps:
 - script: |
+    docker pull ubuntu
     npm install
     npm test
     docker build -f Dockerfile -t $(dockerId)/$(imageName) .
