--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,15 +3,15 @@
 #pool:
   #vmImage: 'Ubuntu 16.04'
   
-variables:
-  imageName: 'nodejssample:$(Build.BuildId)'
+#variables:
+  #imageName: '$(Build.BuildId)'
   # define two more variables dockerId and dockerPassword in the build pipeline in UI
 
 steps:
 - script: |
     npm install
     npm test
-    docker build -f Dockerfile -t $(dockerId)/$(imageName) .
+    docker build -f Dockerfile 
     docker login -u $(anis2k07) -p $pswd
     docker push $(dockerId)/$(imageName)
   env:
