--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,12 +11,12 @@ steps:
 - script: |
     npm install
     npm test
-    docker build -f Dockerfile.debug
-    docker login -u $(anis2k07) -p $pswd
+    docker build -f Dockerfile -t $(dockerId)/$(imageName)
+    docker login -u $dockerId -p $pswd
     docker push $(dockerId)/$(imageName)
   env:
     pswd: $(Anis@1234)
-
+    dockerId: $(anis2k07) 
 - task: PublishTestResults@2
   condition: succeededOrFailed()
   inputs:
