--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,7 +13,7 @@ steps:
     npm test
     docker build -f Dockerfile -t $(dockerId)/$(imageName)
     docker login -u $dockerId -p $pswd
-    docker push anis2k07/node:tagname
+    docker push anis2k07/node:$(dockerId)/$(imageName)
   env:
     pswd: $(Anis@1234)
     dockerId: $(anis2k07) 
